# pcn-snek

./: .gitignore  LICENSE  bot.py  config.py  ecosystem.config.js  main.py  pyproject.toml  requirements.txt
configs/: settings.json
extensions/: auto_verify.py  default.py  globals.py  paginator.py  sentry.py  tablemaker.py  uptime.py
extensions/admin/: botutil.py  find.py  update.py
extensions/automations/: events.py
extensions/league/: player.py  tables.py
extensions/support/: support.py
extensions/verification/: queue.py  register.py  verification.py
scales/: _tables.py  admin.py  bot_info.py  events.py  find.py  player.py  queue.py  register.py  sentry.py  support.py  tables.py  test.py  verification.py
utils/: auto_verify.py  log.py  permissions.py  player_builder.py
