[tool.poetry]
name = "pcn"
version = "0.3.1"
description = "PCN Bot using dis-snek"
authors = ["compil3 <luca.tenuta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0"
black = "^21.9b0"
python-dotenv = "^0.19.1"
dnspython = "^2.1.0"
motor = "^2.5.1"
requests = "^2.26.0"
dis-snek = {git = "https://github.com/Discord-Snake-Pit/Dis-Snek.git"}
pyxtension = "^1.13.16"
orjson = "^3.6.4"
psutil = "^5.8.0"
APScheduler = "^3.8.1"
httpx = "^0.20.0"
snek-paginator = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
