[tool.poetry]
name = "pcn"
version = "2.0.0"
description = "PCN Bot using NAFF"
authors = ["compil3 <luca.tenuta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.1"
python-dotenv = "^0.19.1"
dnspython = "^2.1.0"
motor = "^2.5.1"
requests = "^2.26.0"
orjson = "^3.6.4"
psutil = "^5.8.0"
APScheduler = "^3.8.1"
wikipedia = "^1.4.0"
certifi = "^2021.10.8"
beanie = "^1.10.0"
dynaconf = "^3.1.7"
sentry-sdk = "^1.5.7"
naff = "^1.0.0"
black = "^22.3.0"
GitPython = "^3.1.27"
aiofile = "^3.7.4"
rich = "^12.4.4"
aiohttp-client-cache = {extras = ["all"], version = "^0.7.1"}
httpx = "^0.23.0"
aiohttp = "^3.8.1"
aiocache = {extras = ["msgpack"], version = "^0.11.1"}
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
